# easyobs_ai_observability

./: .env.sample  .gitignore  .pypirc.sample  LICENSE  README.ko.md  README.md  pyproject.agent.toml  pyproject.toml
apps/web/: .env.sample  next.config.ts  package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/app/pending/: page.tsx
apps/web/app/signin/: page.tsx
apps/web/app/signup/: page.tsx
apps/web/app/workspace/: layout.tsx  overview-quality-panel.tsx  page.tsx  shell.tsx
apps/web/app/workspace/interactions/: page.tsx
apps/web/app/workspace/metrics/: page.tsx
apps/web/app/workspace/quality/: guard.tsx  guides.tsx  page.tsx
apps/web/app/workspace/sdk/: page.tsx
apps/web/app/workspace/sessions/: page.tsx
apps/web/app/workspace/settings/: page.tsx
apps/web/app/workspace/tracing/: page.tsx
apps/web/components/: alarm-pinned.tsx  charts.tsx  llm-view.tsx
apps/web/public/docs/: alarms.html  api-reference.html  configuration.html  deployment.html  docs.js  eval-golden.html  eval-improvements.html  eval-judges.html  eval-metrics-catalog.html  eval-overview.html  eval-profiles.html  eval-runs.html  index.html  installation.html  interactions.html  metrics.html  organizations.html  quickstart.html  sdk-langchain.html  sdk-otlp.html  sdk-python.html  sdk-typescript.html  sessions.html  style.css  tracing.html
apps/web/public/docs/en/: alarms.html  api-reference.html  configuration.html  deployment.html  docs.js  eval-golden.html  eval-improvements.html  eval-judges.html  eval-metrics-catalog.html  eval-overview.html  eval-profiles.html  eval-runs.html  index.html  installation.html  interactions.html  metrics.html  organizations.html  quickstart.html  sdk-langchain.html  sdk-otlp.html  sdk-python.html  sdk-typescript.html  tracing.html
apps/web/public/docs/kr/: alarms.html  api-reference.html  configuration.html  deployment.html  eval-golden.html  index.html  (+18 more)
examples/: agent_langchain.py  agent_min.py
scripts/: build-agent-sdk.ps1  ingest-sample.ps1  run-dev.ps1  run-dev.sh  sample_ingest.json  seed-demo.py  seed-llm-demo.py  translate_kr_docs.py
setup/: README.ko.md  README.md  terraform-easyobs-ec2.ko.md  terraform-easyobs-ec2.md
setup/compose/: README.ko.md  README.md  docker-compose.app.yml  docker-compose.cluster.yml  docker-compose.deps.yml  env.sample  nginx.cluster.conf
setup/ec2/terraform/cluster/: main.tf  outputs.tf  terraform.tfvars.example  tf-apply.ps1  tf-apply.sh  tf-delete.ps1  tf-delete.sh  variables.tf
setup/ec2/terraform/single/: main.tf  outputs.tf  terraform.tfvars.example  tf-apply.ps1  tf-apply.sh  tf-delete.ps1  tf-delete.sh  tfplan  variables.tf
setup/images/api/: Dockerfile
setup/images/web/: Dockerfile
setup/offline/: README.ko.md  README.md  build-bundle.ps1  build-bundle.sh  deploy-cluster.sh  deploy-single.sh  load-bundle.sh
src/easyobs/: __init__.py  cli.py  http_app.py  logging_setup.py  settings.py
src/easyobs/adapters/: __init__.py  blob_azure.py  blob_gcs.py  blob_hybrid.py  blob_local.py  blob_parquet.py  blob_s3.py  catalog_sqlite.py
src/easyobs/alarms/: __init__.py  catalog.py  dispatcher.py  dtos.py  evaluator.py  services.py
src/easyobs/api/: __init__.py  deps.py  middleware.py  security.py
src/easyobs/api/routers/: alarms.py  analytics.py  auth.py  dashboard.py  evaluations.py  health.py  organizations.py  otlp.py  settings.py  tokens.py  traces.py
src/easyobs/db/: __init__.py  models.py  session.py  types.py
src/easyobs/eval/: __init__.py  auto_rule.py  pack_rule_presets.py  types.py
src/easyobs/eval/catalog/: catalog_loader.py  eval_metric_catalog_v1.json
src/easyobs/eval/judge/: __init__.py  consensus.py  defaults.py  dimensions_meta.py  providers.py  runner.py
src/easyobs/eval/rules/: __init__.py  builtin.py  dsl.py
src/easyobs/eval/services/: __init__.py  agent_invoke.py  cost.py  dtos.py  evaluators.py  golden_regression.py  golden_upload.py  goldensets.py  human_labels.py  improvement_catalog.py  improvement_i18n.py  improvements.py  judge_models.py  profiles.py  progress.py  runs.py  schedules.py  synth_prompts.py  synthesizer.py  trust.py
src/easyobs/ingest/: __init__.py  enrich.py  flatten_json.py  flatten_proto.py  parquet_schema.py  pipeline.py
src/easyobs/ports/: __init__.py  blob.py  catalog.py
src/easyobs/services/: analytics.py  analytics_duckdb.py  app_settings.py  auth.py  directory.py  llm_attrs.py  mock_seed.py  mock_traffic.py  pricing.py  query_engine.py  storage_probe.py  tokens.py  trace_ingest.py  trace_query.py  trace_query_duckdb.py
src/easyobs_agent/: __init__.py  boot.py  span_scope.py  tags.py
src/easyobs_agent/callbacks/: __init__.py
tests/: conftest.py  test_eval_api.py  test_eval_judge.py  test_eval_rules.py  test_eval_services.py
(+25 files in other folders)
